fixed color contrast WCAG AA

--- a/css/style.css
+++ b/css/style.css
@@ -103,12 +103,12 @@ nav {
   letter-spacing: 1px;
   line-height: 50px;
   padding: 20px 35px;
-  color: #cbc38a;
+  color: #817027;
   text-align: center;
 }
 
 .main-txt h1 span {
-  color: #006d23;
+  color: #208142;
 }
 
 .iphone-app-img {
